--- a/prod.env
+++ b/prod.env
@@ -1,1 +1,3 @@
 REACT_APP_API_KEY = https://delivery-app-backend-ghh4.onrender.com/
+REACT_APP_GOOGLE_API_KEY = "AIzaSyCxyo5J8uJ1O5hzhV4fx2-hGiySpsmMQk4"
+REACT_APP_GOOGLE_STORAGE_KEY = "https://storage.googleapis.com/delivery-app-images/"
