--- a/package.json
+++ b/package.json
@@ -43,12 +43,21 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-places-autocomplete": "^7.2.9",
     "env-cmd": "^10.1.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
+    "styled-content-loader": "^1.2.2"
   }
 }
