--- a/package.json
+++ b/package.json
@@ -43,14 +43,19 @@
     ]
   },
   "devDependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/jquery": "^3.5.16",
     "@types/react-places-autocomplete": "^7.2.9",
     "env-cmd": "^10.1.0",
+    "jquery": "^3.6.3",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
