--- a/package.json
+++ b/package.json
@@ -54,11 +54,15 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/jquery": "^3.5.16",
     "@types/react-places-autocomplete": "^7.2.9",
+    "@types/react-scroll": "^1.8.6",
+    "@types/react-test-renderer": "^18.0.0",
     "env-cmd": "^10.1.0",
     "jquery": "^3.6.3",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
+    "react-scroll": "^1.8.9",
+    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
