--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "fooddelivery",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
@@ -52,11 +51,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "@testing-library/react": "^13.4.0",
+    "@types/enzyme": "^3.10.12",
     "@types/jquery": "^3.5.16",
     "@types/react-places-autocomplete": "^7.2.9",
     "@types/react-scroll": "^1.8.6",
     "@types/react-test-renderer": "^18.0.0",
     "env-cmd": "^10.1.0",
+    "enzyme": "^3.11.0",
     "jquery": "^3.6.3",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^8.0.5",
