--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^6.5.0",
     "react-scroll": "^1.8.9",
     "react-test-renderer": "^18.2.0",
+    "react-waypoint": "^10.3.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
